action cell buttons no longer wrap when changing screen sizes

--- a/client/views/actionCell/actionCell.less
+++ b/client/views/actionCell/actionCell.less
@@ -2,9 +2,15 @@
 @import '../../stylesheets/elements.less'; 
 
 i.draft-action {
-	float : left;	
+	display : inline-block;	
 }
 
 i.edit-action {
-	margin-left : 15px;
+	margin-left : 20px;
+}
+
+.action-cell-container {
+	overflow : auto;
+	white-space: nowrap;
+	float : left;
 }
